// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files w/ has lots of imports and needs hydration of nested domain objects 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "upc",
      ],
      "updatable": Array [
        "colors",
        "quantity",
        "description",
      ],
    },
    "extends": "DomainEntity",
    "name": "Item",
    "properties": Object {
      "colors": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectPropertyMetadata {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "description": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "price": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "upc": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [],
      "updatable": Array [],
    },
    "extends": "DomainEntity",
    "name": "Order",
    "properties": Object {
      "destination": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainValueObject",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "items": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectPropertyMetadata {
          "nullable": false,
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Item",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files w/ no need for hydration 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files which needs hydration of nested enum 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "externalId",
      ],
      "updatable": Array [
        "status",
        "amount",
        "currency",
      ],
    },
    "extends": "DomainEntity",
    "name": "Payment",
    "properties": Object {
      "amount": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "currency": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "externalId": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "status": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": Array [
          "PENDING",
          "COMPLETED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
    },
  },
]
`;
